Patch content indexing issue #869 (#421)
* Refactor content indexing issue #869